WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253776
Call parentNode() instead of parentOrShadowHostNode() on Node types that cannot be shadow roots
https://bugs.webkit.org/show_bug.cgi?id=253776
Summary
Call parentNode() instead of parentOrShadowHostNode() on Node types that cann...
Chris Dumez
Reported
2023-03-11 19:58:16 PST
Call parentNode() instead of parentOrShadowHostNode() on Node types that cannot be shadow roots. This avoids a shadow root check.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-03-11 20:00:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11413
EWS
Comment 2
2023-03-13 16:50:17 PDT
Committed
261601@main
(9a64c570c29a): <
https://commits.webkit.org/261601@main
> Reviewed commits have been landed. Closing PR #11413 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-13 16:51:18 PDT
<
rdar://problem/106672502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug