Call parentNode() instead of parentOrShadowHostNode() on Node types that cannot be shadow roots https://bugs.webkit.org/show_bug.cgi?id=253776

Reviewed by Darin Adler.

Call parentNode() instead of parentOrShadowHostNode() on Node types that cannot
be shadow roots. This avoids a shadow root check.

* Source/WebCore/dom/CharacterData.h:
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/Element.h:
* Source/WebCore/dom/Text.cpp:
(WebCore::isSVGShadowText):
(WebCore::isSVGText):
(WebCore::Text::createTextRenderer):
* Source/WebCore/svg/SVGElement.cpp:
(WebCore::SVGElement::ownerSVGElement const):
(WebCore::SVGElement::viewportElement const):

Canonical link: https://commits.webkit.org/261601@main